--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "echo Skip build on Heroku"
   },
-  "author": "",
+  "author": "Andrew Errity",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.3.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.20",
     "react": "^16.5.2",
-    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1"
   },
